--- a/Inicial.ipynb
+++ b/Inicial.ipynb
@@ -3255,13 +3255,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1d093265-40b4-49e7-b913-40b5adfe6cb2"
+        "outputId": "9fda22ab-e511-4c02-b0a8-0c6d1df88a41"
       },
       "source": [
         "probabilidad = 1 - 0.9767\n",
         "probabilidad"
       ],
-      "execution_count": 271,
+      "execution_count": 277,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3271,7 +3271,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 271
+          "execution_count": 277
         }
       ]
     },
@@ -3308,6 +3308,131 @@
           },
           "metadata": {},
           "execution_count": 272
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Para saber Más\n",
+        "\n",
+        "Una empresa verificó que las lámparas incandescentes XPTO tienen una vida útil normalmente distribuida, con un media igual a 720 días y una desviación estándar igual a 30 días. Calcula la probabilidad de que una lámpara, elegida al azar, dure:\n",
+        "\n",
+        "1) Entre 650 y 750 días\n",
+        "\n",
+        "2) Más de 800 días\n",
+        "\n",
+        "3) Menos de 700 días"
+      ],
+      "metadata": {
+        "id": "sZ2Ua0ejLR-X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import norm\n",
+        "\n",
+        "media = 720\n",
+        "desviacion_estandar = 30\n",
+        "\n",
+        "# Item A\n",
+        "Z_inferior = (650 - media) / desviacion_estandar\n",
+        "Z_superior = (750 - media) / desviacion_estandar\n",
+        "\n",
+        "probabilidad = norm.cdf(Z_superior) - norm.cdf(Z_inferior)\n",
+        "print(f'{probabilidad:.2%}')\n",
+        "\n",
+        "# Item B\n",
+        "Z = (800 - media) / desviacion_estandar\n",
+        "\n",
+        "probabilidad = 1 - norm.cdf(Z)\n",
+        "print(f'{probabilidad:.2%}')\n",
+        "\n",
+        "# Item C\n",
+        "Z = (700 - media) / desviacion_estandar\n",
+        "\n",
+        "probabilidad = norm.cdf(Z)\n",
+        "print(f'{probabilidad:.2%}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d2zWAGZCLY1e",
+        "outputId": "59683f80-a8e5-47fa-bd42-388519e68583"
+      },
+      "execution_count": 273,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "83.15%\n",
+            "0.38%\n",
+            "25.25%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Usando la tabla estandarizada, o las herramientas proporcionadas por Python, encuentre el área debajo de la curva normal para los valores Z a continuación:\n",
+        "\n",
+        "1) Z < 1,96\n",
+        "\n",
+        "2) Z > 2,15\n",
+        "\n",
+        "3) Z < -0,78\n",
+        "\n",
+        "4) Z > 0,59"
+      ],
+      "metadata": {
+        "id": "I7JX7ancNFJs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import norm\n",
+        "\n",
+        "# Item A\n",
+        "probabilidad = norm.cdf(1.96)\n",
+        "print(f'{probabilidad:0.4f}')\n",
+        "\n",
+        "# Item B\n",
+        "probabilidad = 1 - norm.cdf(2.15)\n",
+        "# o -> probabilidad = norm.sf(2.15)\n",
+        "print(f'{probabilidad:0.4f}')\n",
+        "\n",
+        "# Item C\n",
+        "probabilidad = norm.cdf(-0.78)\n",
+        "print(f'{probabilidad:0.4f}')\n",
+        "\n",
+        "# Item D\n",
+        "probabilidad = 1 - norm.cdf(0.59)\n",
+        "# o -> probabilidad = norm.sf(0.59)\n",
+        "print(f'{probabilidad:0.4f}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yhRnm0xwNH5e",
+        "outputId": "25938681-8132-427b-b484-86ff629eb55b"
+      },
+      "execution_count": 274,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9750\n",
+            "0.0158\n",
+            "0.2177\n",
+            "0.2776\n"
+          ]
         }
       ]
     },
